# Labor_Biosignalverarbeitung

./: .gitignore  Beispiele  README.md  pyproject.toml
Bericht2_Biosignalverarbeitung/: LAB2.tex  literature.bib
Bericht2_Biosignalverarbeitung/figures/: Messsystem.drawio
Bericht2_Biosignalverarbeitung/sections/: 1-introduction.tex  2-messsystem.tex  2-preparation.tex  3-execution.tex
Bericht3_Biosignalverarbeitung/: LAB3.tex  literature.bib
Bericht3_Biosignalverarbeitung/figures/: Blockschaltbild.drawio
Bericht3_Biosignalverarbeitung/sections/: 1-introduction.tex  2-execution.tex  2-preparation.tex  3-execution.tex  4-result.tex
Bericht_Biosignalverarbeitung/: LAB3.tex  literature.bib
Bericht_Biosignalverarbeitung/Laborbericht_Biosignal_Vorlage/: LAB3.tex  literature.bib
Bericht_Biosignalverarbeitung/sections/: 2-preparation.tex  3-execution.tex  4-result.tex
Labor_1/: P1_Visualisierung_Messdaten.ipynb
Labor_1/Daten/: Arduino_ACC_ErsteDaten.txt  IMU_DATEN.csv  Lab1_10s-1Achse.csv  Lab1_10s-1Achse.txt  Lab1_10s-1Achse_3Anlauf.csv  Lab1_10s-1Achse_3Anlauf.txt  Lab1_IMU_6Achsentest.csv
Labor_2/: Lab2Functions.py  MainCode2.ipynb  analyse_data.py  analyse_heart_data.py  calculateenergy.py  serialRead.ipynb
Labor_2/Daten_L2/: Daten_Kurs.csv  Daten_mitNetzteil.csv  (+8 more)
Labor_3/: Fatigue1.csv  Fatigue2.csv  Fatigue3.csv  Lab3Code1.ino  MVC1.csv  MVC1_e.csv  MVC1_m.csv  MVC2.csv  MVC2_e.csv  MVC2_m.csv  MVC3.csv  MVC3_e.csv  MVC3_m.csv  MainCode3_strukturiert.ipynb  Weight1.csv  Weight2.csv  Weight3.csv  ohne_adc.txt  serialReadEMG.ipynb  todo.md
(+35 files in other folders)
