[project]
name = "Labor_Biosignalverarbeitung"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MaierElias", email = "me7770@mci4me.at"},
]
dependencies = ["numpy>=2.3.4", "pandas>=2.3.3", "scipy>=1.16.3", "matplotlib>=3.10.7"]
requires-python = "==3.13.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
